# hack

./: .env  README.md  devices.py  pyproject.toml  registry.py  smart_home_server.py  tool_template.py  tv2.py
device_states/: devices.json  tv_config.json
